--- a/credentials.yml
+++ b/credentials.yml
@@ -14,10 +14,10 @@ telegram:
   webhook_url: "${TELEGRAM_WEBHOOK_URL}"
 
 # Twilio WhatsApp Configuration  
-twilio:
-  account_sid: "${TWILIO_ACCOUNT_SID}"
-  auth_token: "${TWILIO_AUTH_TOKEN}"
-  twilio_number: "${TWILIO_NUMBER}"
+# twilio:
+#   account_sid: "${TWILIO_ACCOUNT_SID}"
+#   auth_token: "${TWILIO_AUTH_TOKEN}"
+#   twilio_number: "${TWILIO_NUMBER}"
 
 # This entry is needed if you are using Rasa Enterprise. The entry represents credentials
 # for the Rasa Enterprise "channel", i.e. Talk to your bot and Share with guest testers.
