--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,7 +3,7 @@ nodaemon=true
 user=1001
 
 [program:rasa-core]
-command=bash -c "python3 setup_credentials.py && rasa run --enable-api --cors \"*\" --port 5005"
+command=bash -c "echo 'Token is:' $TELEGRAM_ACCESS_TOKEN && rasa run --enable-api --cors \"*\" --port 5005"
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
