--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,14 +2,20 @@
 nodaemon=true
 user=1001
 
+[program:setup]
+command=bash -c "python3 /app/setup_credentials.py"
+autostart=true
+autorestart=false
+startsecs=0
+
 [program:rasa-core]
-command=bash -c "echo 'Token is:' $TELEGRAM_ACCESS_TOKEN && rasa run --enable-api --cors \"*\" --port 5005"
+command=bash -c "sleep 2 && rasa run --enable-api --cors \"*\" --port 5005"
+autostart=true
 autorestart=true
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 
 [program:rasa-actions]
 command=rasa run actions --port 5055
+autostart=true
 autorestart=true
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
