--- a/credentials.yml
+++ b/credentials.yml
@@ -9,9 +9,9 @@ rest:
 # Telegram Configuration
 # Access token akan diambil dari environment variable
 telegram:
-  access_token: "${TELEGRAM_ACCESS_TOKEN}"
-  verify: "${TELEGRAM_VERIFY}"
-  webhook_url: "${TELEGRAM_WEBHOOK_URL}"
+  access_token: "8552392607:AAE628ew_BhERqZTHGK6oc7WOfMZCryfX-A"
+  verify: "STROBO17_bot"
+  webhook_url: "https://rasa-chatbot-production-04ff.up.railway.app/webhooks/telegram/webhook"
 
 # Twilio WhatsApp Configuration  
 # twilio:
