--- a/supervisord.conf
+++ b/supervisord.conf
@@ -3,6 +3,7 @@ nodaemon=true
 user=1001
 
 [program:rasa-core]
+environment=SANIC_NO_UVLOOP="true",SANIC_NO_UJSON="true"
 command=bash -c "rasa run --enable-api --cors \"*\" --port 5005"
 autostart=true
 autorestart=true
