--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,16 +1,22 @@
 [supervisord]
 nodaemon=true
 user=1001
+logfile=/dev/null
+pidfile=/tmp/supervisord.pid
 
-[program:rasa-core]
-environment=SANIC_NO_UVLOOP="true",SANIC_NO_UJSON="true"
-command=bash -c "rasa run --enable-api --cors \"*\" --port 5005"
+[program:rasa-actions]
+command=rasa run actions --port 5055 --host 0.0.0.0
 autostart=true
 autorestart=true
+priority=1
+startretries=3
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 
-[program:rasa-actions]
-command=rasa run actions --port 5055
+[program:rasa-core]
+command=bash -c "sleep 5 && rasa run --enable-api --cors \"*\" --port 5005 --host 0.0.0.0"
 autostart=true
 autorestart=true
+priority=2
+stdout_logfile=/dev/stdout
+stderr_logfile=/dev/stderr
