--- a/supervisord.conf
+++ b/supervisord.conf
@@ -5,7 +5,7 @@ logfile=/dev/null
 pidfile=/tmp/supervisord.pid
 
 [program:rasa-actions]
-command=rasa run actions --port 5055 --host 0.0.0.0
+command=rasa run actions --port 5055
 autostart=true
 autorestart=true
 priority=1
@@ -14,7 +14,7 @@ stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 
 [program:rasa-core]
-command=bash -c "sleep 5 && rasa run --enable-api --cors \"*\" --port 5005 --host 0.0.0.0"
+command=bash -c "sleep 5 && rasa run --enable-api --cors \"*\" --port 5005"
 autostart=true
 autorestart=true
 priority=2
